frontend/manifests/ingress/frontend-api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sentiment-frontend-api-ingress
  namespace: sentiment-app-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: sentiment-app.comdev
      http:
        paths:
          # ---- Backend API ----
          - path: /api/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: model-api-service
                port:
                  number: 8081
