frontend/manifests/ingress/frontend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sentiment-frontend-ingress
  namespace: sentiment-app-dev
spec:
  ingressClassName: nginx
  rules:
    - host: sentiment-app.comdev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sentiment-frontend-service
                port:
                  number: 8082
